# Projects

./: README.md  Știube_Denis_CV.docx
ANN_CNN_image_filter/: main.ipynb  models.py
BasketballClientServer/: BasketballClientServer.sln  README.md  basketball.db
BasketballClientServer/BasketballClient/: BasketballClient.csproj  StartClient.cs
BasketballClientServer/BasketballModel/: BasketballModel.csproj
BasketballClientServer/BasketballNetworking/: BasketballNetworking.csproj
BasketballClientServer/BasketballPersistance/: BDRepositoryCashier.cs  BDRepositoryClient.cs  BDRepositoryGame.cs  BDRepositoryPurchase.cs  BasketballPersistance.csproj  IRepository.cs  IRepositoryCashier.cs  IRepositoryClient.cs  IRepositoryGame.cs  IRepositoryPurchase.cs
BasketballClientServer/BasketballServer/: App.config  (+3 more)
GA_community_detection/: EvolutiveAlgorithm.py
Pharmacy/: CMakeLists.txt  Farmacie.txt  main.cpp
Pharmacy/Domain/: Medicament.cpp  Medicament.h
Pharmacy/GUI/: FarmacieGUI.cpp  FarmacieGUI.h  RetetaGUI.cpp  RetetaGUI.h  RetetaReadOnlyGUI.cpp  RetetaReadOnlyGUI.h
Pharmacy/ListModel/: ListModel.cpp  ListModel.h
Pharmacy/Observer/: Observer.cpp  Observer.h
Pharmacy/Repository/: InFileRepo.cpp  InFileRepo.h  Repo.cpp  Repo.h  RepoAbstract.cpp  RepoAbstract.h
Pharmacy/Reteta/: Reteta.cpp  Reteta.h
Pharmacy/Service/: Service.cpp  Service.h
Pharmacy/Teste/: teste.cpp  teste.h
Pharmacy/Undo/: ActiuneUndo.cpp  ActiuneUndo.h
Pharmacy/Utils/: utils.cpp  utils.h
Pharmacy/Validare/: Error.cpp  Error.h
SocialNetwork/: README.md  build.gradle
(+86 files in other folders)
